# gl-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-ai-adoption-scorecard.md  002-task-activity-usage-detection.md  003-adoption-v2-signals.md  004-ai-adoption-html-report.md  005-dormant-repo-visibility.md  006-clickable-html-report.md  007-ai-author-attribution.md  008-spec-drift-audit.md  009-spec-audit-security-and-map.md  010-reverse-drift.md  011-reverse-drift-fragment-routes.md  012-spec-audit-html-report.md  013-multi-platform-spec-sweep.md  014-cross-team-sweep-html-report.md  015-multi-file-routes-file.md  016-build-profile-optimization.md  017-mcp-label-sync-build-step.md  018-list-group-projects-pagination.md  019-update-file-multi-file-branch.md  020-update-mr-and-create-branch.md  021-job-log-and-fence-safe-compact.md  022-pipeline-job-ids-and-ansi-clean-logs.md  023-project-lifecycle-transfer-delete.md  024-add-project-member.md  025-add-group-member.md  026-sentry-user-error-filter.md  027-adoption-active-vs-configured.md  028-html-report-active-axis-and-group-activity-messages.md  029-architecture-refactor-retry-errors-users.md  030-toolset-profiles.md  031-path-traversal-hardening.md  032-audit-readmes.md  033-archived-project-merge-status.md  034-commit-message-is-not-an-mr-title.md  035-update-mr-assignee.md  036-surface-mr-assignee.md  037-people-based-adoption-metrics.md  038-update-file-empty-repo-init.md  039-merge-mr-error-interpretation.md  040-realistic-adoption-tool-agnostic-and-axes.md  (+2 more)
rules/: ansible.toml  global.toml  go.toml  kotlin.toml  php.toml  swift.toml  typescript.toml
scripts/: sync-mcp-label.py
src/: client.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  params.rs  resolver.rs  server.rs  teams.rs
src/tools/: adoption.rs  commits.rs  docs.rs  issues.rs  lint.rs  merge_requests.rs  mod.rs  pipelines.rs  projects.rs  reports.rs  repository.rs  spec.rs  users.rs
tests/: test_config.rs  test_tools.rs
