[package]
name = "gl-mcp"
version = "0.1.0"
edition = "2024"
description = "GitLab MCP server for Claude Code"
license = "MIT"

[[bin]]
name = "gl-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
url = "2"
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
