[package]
name = "gl-mcp"
version = "0.8.0"
edition = "2024"
description = "GitLab MCP server for Claude Code — 54 tools for projects, issues, MRs, CI/CD, code review, and team analytics"
license = "MIT"
authors = ["Alex Velesnitski <velesnitski@gmail.com>"]
repository = "https://github.com/velesnitski/gl-mcp"
homepage = "https://github.com/velesnitski/gl-mcp"
keywords = ["gitlab", "mcp", "claude", "code-review", "devtools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lib]
name = "gl_mcp"
path = "src/lib.rs"

[[bin]]
name = "gl-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
url = "2"
anyhow = "1"
thiserror = "2"
toml = "0.8"
regex = "1"
sentry = { version = "0.37", default-features = false, features = ["reqwest", "rustls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
