[package]
name = "gl-mcp"
version = "1.1.2"
edition = "2024"
description = "GitLab MCP server for Claude Code — 100 tools for projects, issues, MRs, CI/CD, code review, team analytics, and spec-drift auditing"
license = "MIT"
authors = ["Alex Velesnitski <velesnitski@gmail.com>"]
repository = "https://github.com/velesnitski/gl-mcp"
homepage = "https://github.com/velesnitski/gl-mcp"
keywords = ["gitlab", "mcp", "claude", "code-review", "devtools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lib]
name = "gl_mcp"
path = "src/lib.rs"

[[bin]]
name = "gl-mcp"
path = "src/main.rs"

[features]
default = ["sentry", "http"]
sentry = ["dep:sentry"]
http = ["dep:axum", "rmcp/transport-streamable-http-server"]

[dependencies]
rmcp = { version = "0.11", features = ["transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time", "sync", "net"] }
axum = { version = "0.8", optional = true }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
url = "2"
anyhow = "1"
thiserror = "2"
toml = "0.8"
regex = "1"
sentry = { version = "0.37", default-features = false, features = ["reqwest", "rustls"], optional = true }

[profile.release]
strip = true
lto = "thin"        # thin LTO: ~full-LTO size, much faster link than lto=true
codegen-units = 1

# Trim debug info from dev/test builds: keeps file:line in backtraces (so test
# failures stay readable) but drops local-variable info — cuts the `target/debug`
# footprint sharply. The MCP server ships the release binary; dev/test rarely
# need a step-debugger.
[profile.dev]
debug = "line-tables-only"
